--- a/todo.txt
+++ b/todo.txt
@@ -1,16 +1,21 @@
-show controls during loading map, push click to start
-shadow map > ray casting/tracing?
-instead of progress bar capture, fade in color over all structures
-
-player moves in the dark but at start of map is shown hint/map reveal momentarily7
+SHORT:
+design lvls + purpose
+game menu - play, credits, exit
 
 MID:
-fog
-black unexplored
 agents chase
-agents stop/change pattern/speed
-switches/doors
-scrolling
 import map
+fix clamp bug
+check center not topleft ie player dist to coord
+level choice screen
+music
+
+LONG:
+splashscreen
 set shade lvl by distance from player
-create separate fow surface, draw everywhere not lit
+
+
+MAYBE:
+scrolling?
+agents stop/change pattern/speed?
+at start of map is shown hint/map reveal momentarily7
