--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,4 @@
 SHORT:
-remake fov/color map !!!
 crystals
 absorbing enemy check
 on win screen
@@ -21,4 +20,4 @@ scrolling?
 agents stop/change pattern/speed?
 at start of map is shown hint/map reveal momentarily7
 
-fog/fov as tuples?
+check on entered new tile?
