--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,4 @@
 SHORT:
-fix clamp bug
-round player
 
 MID:
 
@@ -8,16 +6,17 @@ LONG:
 finer light grid
 
 MAYBE:
+crystals instead of merge
+round player
 2p?
 set color alpha by distance from agent
 splashscreen
 add silver/gold time to beat
 scrolling?
 agents stop/change pattern/speed?
-at start of map is shown hint/map reveal momentarily7
 check on entered new tile? add coord in player/agent. 
 player sprite
-graphics
+better graphics
 alert on new best time
 
 Map ideas:
